--- a/2025/03-dagstat/rpf.tex
+++ b/2025/03-dagstat/rpf.tex
@@ -141,26 +141,37 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{itemize}[<+->]
 \tightlist
 \item
-  Individual decision trees: Easy to interpret
+  Goal: Fast, flexible, and \textbf{interpretable} predictive models
 \item
-  Random Forest (RF): Less so
-\item
-  \textbf{Desirable properties}:
+  Tree-based methods like Random Forest (RF):
 
   \begin{itemize}[<+->]
   \tightlist
   \item
-    Meaningful feature importance rather than rankings
+    Fast \& flexible
   \item
-    Quantification of main- \emph{and interaction} effects
+    Interpretable? → It depends
   \end{itemize}
 \item
-  Additive models (LM, GAM, \ldots) can provide both
+  Desirable properties:
+
+  \begin{itemize}[<+->]
+  \tightlist
+  \item
+    Meaningful \emph{feature importance}
+  \item
+    Quantification of main- \emph{and interaction} \emph{effects}
+  \end{itemize}
 \item
+  Additive models (LM, GAM, \ldots) can provide both\\
   → Need to manually specify interactions in model fit
 \end{itemize}
 
-\textbf{Random Planted Forest} (RPF): Additive Random Forest
+\pause
+
+\vfill
+
+→ \textbf{Random Planted Forest} (RPF): Additive Random Forest
 \end{frame}
 
 \begin{frame}{Functional ANOVA Expansion}
@@ -168,28 +179,29 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{itemize}[<+->]
 \tightlist
 \item
-  Setting: Regression with target \(Y_i \in \mathbb{R}^p\) and feature
-  vector \(\mathbf{x_i}\)
+  Setting: Regression with target \(Y_i \in \mathbb{R}\), features
+  \(X_i \in \mathbb{R}^p\), instance \(\mathbf{x}_i\)
 \item
-  Decompose prediction
-  \(\mathbb{E}(Y_i | X = \mathbf{x}_i) = \hat{m}(\mathbf{x_i})\) into
+  Expand prediction
+  \(\mathbb{E}(Y_i | X = \mathbf{x}_i) = \hat{m}(\mathbf{x}_i)\) into
 
   \begin{itemize}[<+->]
   \tightlist
   \item
-    Average prediction \(\hat{m}_{0}\) (``intercept'')
+    \(\hat{m}_{0}\): Average prediction (\emph{``intercept''})
   \item
-    Terms \(\hat{m}_S\) with \(S \subseteq \{1, \ldots, s\}\)
+    Terms \(\hat{m}_S\) with feature set
+    \(S \subseteq \{1, \ldots, p\}\)
   \end{itemize}
 \end{itemize}
 
 \pause
 
 \begin{align*}
-\hat{m}(\mathbf{x}) & = \hat{m}_{0} \\
-& + \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effects}} \\
-& + \underbrace{\hat{m}_{1,2}(x_1,x_2) + \hat{m}_{1,3}(x_1,x_3) + \hat{m}_{2,3}(x_2,x_3)}_{\text{2nd order interactions}} \\ 
-& + \underbrace{\hat{m}_{1,2,3}(x_1,x_2,x_3)}_{\text{3rd order interaction}}
+\hat{m}(\mathbf{x}_i) = & \hat{m}_{0} + \\
+&  \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effect terms}} + \\
+&  \underbrace{\hat{m}_{1,2}(x_1,x_2) + \hat{m}_{1,3}(x_1,x_3) + \hat{m}_{2,3}(x_2,x_3)}_{\text{2nd order interactions}} + \\ 
+&  \underbrace{\hat{m}_{1,2,3}(x_1,x_2,x_3)}_{\text{3rd order interaction}}
 \end{align*}
 \end{frame}
 
@@ -206,8 +218,8 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \end{figure}%
 \end{frame}
 
-\begin{frame}{Planted Trees}
-\phantomsection\label{planted-trees}
+\begin{frame}{Planted Trees (I)}
+\phantomsection\label{planted-trees-i}
 \begin{figure}
 
 \centering{
@@ -221,8 +233,8 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \end{figure}%
 \end{frame}
 
-\begin{frame}{Planted Trees}
-\phantomsection\label{planted-trees-1}
+\begin{frame}{Planted Trees (II)}
+\phantomsection\label{planted-trees-ii}
 \begin{figure}
 
 \centering{
@@ -236,20 +248,23 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \end{figure}%
 \end{frame}
 
-\begin{frame}{Key Differences of RPF to RF}
-\phantomsection\label{key-differences-of-rpf-to-rf}
+\begin{frame}{Key features of Random Planted Forests}
+\phantomsection\label{key-features-of-random-planted-forests}
 \begin{itemize}[<+->]
 \tightlist
 \item
-  Splits some nodes multiple times (→ non-binary trees)
+  Ensemble of trees (like RF)
 \item
-  Keeps track of features involved in split
+  Splits nodes multiple times (→ \emph{non-binary} trees!)
+\item
+  Nodes keep track of features involved in construction
 \item
   Degree of interaction can be constrained
 \item
-  Stopping after adjustable number of splits
+  Tree stops after adjustable number of splits
 \item
-  Prediction is average of additive \(\hat{m}_S\) estimates
+  Prediction built up incrementally, guided by residuals (cf.~Gradient
+  Boosting)
 \end{itemize}
 \end{frame}
 
@@ -277,7 +292,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
     \texttt{no\ workingday}\}
   \end{itemize}
 \item
-  Average prediction: \(\hat{m}_0 \approx\) 143.7
+  Average prediction: \(\hat{m}_0 \approx\) 144
 \end{itemize}
 \end{frame}
 
@@ -286,7 +301,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{columns}[T]
 \begin{column}{0.33\linewidth}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/main-hr-1.png}
+\includegraphics[width=\linewidth,height=0.7\textheight,keepaspectratio]{rpf_files/figure-beamer/main-hr-1.png}
 \end{center}
 \end{column}
 
@@ -294,7 +309,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 
 \begin{column}{0.33\linewidth}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/main-temp-1.png}
+\includegraphics[width=\linewidth,height=0.7\textheight,keepaspectratio]{rpf_files/figure-beamer/main-temp-1.png}
 \end{center}
 \end{column}
 
@@ -302,17 +317,23 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 
 \begin{column}{0.33\linewidth}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/main-workingday-1.png}
+\includegraphics[width=\linewidth,height=0.7\textheight,keepaspectratio]{rpf_files/figure-beamer/main-workingday-1.png}
 \end{center}
 \end{column}
 \end{columns}
+
+\pause
+
+\(\hat{m} = \hat{m}_0 + \hat{m}_{\texttt{hr}}(\texttt{hr}) + \hat{m}_{\texttt{temp}}(\texttt{temp}) + \hat{m}_{\texttt{workingday}}(\texttt{workingday}) + \ldots\)
 \end{frame}
 
 \begin{frame}{Hour \(\times\) Working Day: ``Rush Hour Effect''}
 \phantomsection\label{hour-times-working-day-rush-hour-effect}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/twoway-hr-workingday-1.png}
+\includegraphics[width=\linewidth,height=0.67\textheight,keepaspectratio]{rpf_files/figure-beamer/twoway-hr-workingday-1.png}
 \end{center}
+
+\(\ldots + \hat{m}_{\texttt{hr}, \texttt{workingday}}(\texttt{hr}, \texttt{workingday}) + \ldots\)
 \end{frame}
 
 \begin{frame}{More 2nd Order Interactions}
@@ -320,16 +341,20 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{columns}[T]
 \begin{column}{0.5\linewidth}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/unnamed-chunk-1-1.png}
+\includegraphics[width=\linewidth,height=0.63\textheight,keepaspectratio]{rpf_files/figure-beamer/twoway-temp-workingday-1.png}
 \end{center}
+
+\(+ \hat{m}_{\texttt{temp}, \texttt{workingday}}(\texttt{temp}, \texttt{workingday})\)
 \end{column}
 
 \pause
 
 \begin{column}{0.5\linewidth}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/unnamed-chunk-2-1.png}
+\includegraphics[width=\linewidth,height=0.63\textheight,keepaspectratio]{rpf_files/figure-beamer/twoway-hr-temp-1.png}
 \end{center}
+
+\(+ \hat{m}_{\texttt{hr}, \texttt{temp}}(\texttt{hr}, \texttt{temp}) + \ldots\)
 \end{column}
 \end{columns}
 \end{frame}
@@ -337,21 +362,19 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{frame}{3rd Order Interaction}
 \phantomsection\label{rd-order-interaction}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/unnamed-chunk-3-1.png}
+\includegraphics[width=\linewidth,height=0.775\textheight,keepaspectratio]{rpf_files/figure-beamer/threeway-hr-temp-woringday-1.png}
 \end{center}
 \end{frame}
 
-\begin{frame}{Feature Importance}
-\phantomsection\label{feature-importance}
+\begin{frame}{Feature Importance in RPF}
+\phantomsection\label{feature-importance-in-rpf}
 \begin{itemize}[<+->]
 \tightlist
 \item
-  Average of absolute values of term of interest
+  Average of absolute values of term \(\hat{m}_S\) of interest
 \end{itemize}
 
-\pause
-
-\[\mathrm{VI}_S(X) = \frac{1}{n} \sum_{i=1}^n |\hat{m}_S(\mathbf{x}_i)|\]
+\[\mathrm{FI}_S = \frac{1}{n} \sum_{i=1}^n |\hat{m}_S(\mathbf{x}_i)|\]
 
 \begin{itemize}[<+->]
 \tightlist
@@ -361,9 +384,9 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   \begin{itemize}[<+->]
   \tightlist
   \item
-    Scores \emph{per interaction} term
+    Scores also \emph{per interaction} term
   \item
-    Importance scores on same scale as prediction
+    Importance scores on \emph{same scale} as prediction
   \end{itemize}
 \end{itemize}
 \end{frame}
@@ -371,87 +394,62 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{frame}{Feature Importance per Main Term}
 \phantomsection\label{feature-importance-per-main-term}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/vi-plot-1.png}
+\includegraphics[width=\linewidth,height=0.72\textheight,keepaspectratio]{rpf_files/figure-beamer/vi-plot-main-1.png}
 \end{center}
 \end{frame}
 
-\begin{frame}{Feature Importance per All Terms}
-\phantomsection\label{feature-importance-per-all-terms}
+\begin{frame}{Feature Importance for All Terms}
+\phantomsection\label{feature-importance-for-all-terms}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/vi-plot-thresh-1.png}
+\includegraphics[width=\linewidth,height=0.72\textheight,keepaspectratio]{rpf_files/figure-beamer/vi-plot-thresh-1.png}
 \end{center}
 \end{frame}
 
 \begin{frame}{Feature Importance by Order of Interaction}
 \phantomsection\label{feature-importance-by-order-of-interaction}
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/vi-plot-degree-1.png}
+\includegraphics[width=\linewidth,height=0.72\textheight,keepaspectratio]{rpf_files/figure-beamer/vi-plot-degree-1.png}
 \end{center}
-\end{frame}
-
-\begin{frame}[fragile]{Related work}
-\phantomsection\label{related-work}
-Glex\footnote<.->{\textcite{hiabu2023glex}}: Same ANOVA decomposition
-but generally for tree-based methods (e.g.~XGBoost)
-
-\begin{itemize}[<+->]
-\tightlist
-\item
-  \textbf{Idea}:
-
-  \begin{itemize}[<+->]
-  \tightlist
-  \item
-    Fit XGBoost with more shallow trees (e.g.~\texttt{max\_depth\ =\ 4}
-    \(\leftrightarrow\) \texttt{max\_interaction\ =\ 4})
-  \item
-    Extract component-wise predictions from tree structure
-  \end{itemize}
-\item
-  \textbf{Benefit}: Use existing / well known / well optimzied algorithm
-\item
-  \textbf{Drawback}: Computationally intensive post-hoc computation
-\end{itemize}
 \end{frame}
 
 \begin{frame}{No Free Lunch}
 \phantomsection\label{no-free-lunch}
-Better interpretibility → worse predictive performance?
+Gains in interpretibility → sacrifices in predictive performance?
+
+\vfill
 
 \pause
 
 \begin{itemize}[<+->]
 \tightlist
 \item
-  Benchmark comparing RPF with XGBoost, RF incl.~tuning
+  Benchmark on 28 datasets \footnote<.->{OpenML-CTR23 regression
+    benchmark suite: \textcite{fischer2023openmlctr}} comparing RPF with
+  XGBoost \& RF, incl.~tuning
 \item
-  28 datasets from OpenML-CTR23 regression benchmark suite
-  \footnote<.->{\textcite{fischer2023openmlctr}}
-\item
-  Also comparing XGBoost / RPF with interactions restrained to 2
-\item
-  Generally XGBoost best, RPF and RF closely behind
+  Additionally comparing XGBoost \& RPF with constrained order of
+  interaction to \emph{2}
 \end{itemize}
+
+\pause
+
+\vfill
+
+→ Generally: RPF never best, rarely bad, usually close
 \end{frame}
 
 \begin{frame}{Benchmark Results (Aggregated)}
 \phantomsection\label{benchmark-results-aggregated}
-\begin{itemize}[<+->]
-\tightlist
-\item
-  Root-Relative Squared Error (RRSE)
-  \(\sqrt{\tfrac{SSE(Y, \hat{Y})}{SSE(Y, \bar{Y})}}\)
-\item
-  Featureless model scores 1, perfect score 0
-\end{itemize}
-
 \begin{center}
-\includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/bm-aggr-rrse-1.png}
+\includegraphics[width=\linewidth,height=0.7\textheight,keepaspectratio]{rpf_files/figure-beamer/bm-aggr-rrse-1.png}
 \end{center}
+
+\[\mathrm{RRSE} := \sqrt{\mathrm{SSE}(Y, \hat{Y})\ /\ \mathrm{SSE}(Y, \bar{Y})}\]
+→ Featureless model scores 1, perfect score 0
 \end{frame}
 
-\begin{frame}{Results for Selected Tasks}
-\phantomsection\label{results-for-selected-tasks}
+\begin{frame}{Benchmark Results (Selected Tasks)}
+\phantomsection\label{benchmark-results-selected-tasks}
 \begin{center}
 \includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/bm-scores-sel-1.png}
 \end{center}
@@ -461,19 +459,21 @@ Better interpretibility → worse predictive performance?
 \phantomsection\label{summary}
 \textbf{Random Planted Forests} = Additive Random Forests
 
+\vfill
+
 \begin{itemize}[<+->]
 \tightlist
 \item
-  (+) Interpretability on global and local perspective
+  (↑) Nicely interpretable feature \emph{importance} on same scale as
+  target
 \item
-  (+) Interpretable on same scale as target
+  (↑) Quantifies \emph{main effects} and \emph{interaction terms}
 \item
-  (\textasciitilde) Predictive performance worse but similar to
-  comparable algorithms
+  (↑) R package available \footnote<.->{\href{https://github.com/PlantedML/randomPlantedForest}{github.com/PlantedML/randomPlantedForest}}
 \item
-  (-) Computationally heavy for large data
+  (→) Competetive predictive performance (mostly)
 \item
-  (+) R package available \footnote<.->{\href{https://github.com/PlantedML/randomPlantedForest}{github.com/PlantedML/randomPlantedForest}}
+  (↓) Computationally heavy for large data (Optimization WIP!)
 \end{itemize}
 \end{frame}
 
