--- a/2025/03-dagstat/rpf.tex
+++ b/2025/03-dagstat/rpf.tex
@@ -171,7 +171,9 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 
 \vfill
 
-→ \textbf{Random Planted Forest} (RPF): Additive Random Forest
+\begin{center}
+→ **Random Planted Forest** (RPF): Additive Random Forest
+\end{center}
 \end{frame}
 
 \begin{frame}{Functional ANOVA Expansion}
@@ -339,7 +341,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 \begin{frame}{More 2nd Order Interactions}
 \phantomsection\label{more-2nd-order-interactions}
 \begin{columns}[T]
-\begin{column}{0.5\linewidth}
+\begin{column}[c]{0.5\linewidth}
 \begin{center}
 \includegraphics[width=\linewidth,height=0.63\textheight,keepaspectratio]{rpf_files/figure-beamer/twoway-temp-workingday-1.png}
 \end{center}
@@ -349,7 +351,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
 
 \pause
 
-\begin{column}{0.5\linewidth}
+\begin{column}[c]{0.5\linewidth}
 \begin{center}
 \includegraphics[width=\linewidth,height=0.63\textheight,keepaspectratio]{rpf_files/figure-beamer/twoway-hr-temp-1.png}
 \end{center}
