--- a/2025/03-dagstat/tree-planted-large.tex
+++ b/2025/03-dagstat/tree-planted-large.tex
@@ -60,10 +60,10 @@
   \draw [arrow] (k) -- node[label, right] {No} (m);
 
   % Further splits from Node 8
-  \node (n) [rpfuniquedecision, below=of l] {$x_3 \leq 0.2$};
+  % \node (n) [rpfuniquedecision, below=of l] {$x_3 \leq 0.2$};
 
-  % Connection from Node 8
-  \draw [arrow] (l) -- (n);
+  % % Connection from Node 8
+  % \draw [arrow] (l) -- (n);
 
   % % Nodes from second x3 split
   % \node (o) [interaction, below left=1cm and 0.1cm of n, text width=1.7cm, align=center] {Node 10\\Type: $x_1,x_3$};
