--- a/2025/03-dagstat/rpf.qmd
+++ b/2025/03-dagstat/rpf.qmd
@@ -132,11 +132,9 @@ scores[, learner_id := factor(learner_id, levels = rev(learner_order))]
 ## Functional ANOVA Expansion
 
 - Regression with target $Y_i \in \mathbb{R}$, features $X_i \in \mathbb{R}^p$, instance $\mathbf{x}_i$
-- Expand prediction $\hat{m}(\mathbf{x}_i)$ for $Y_i$ into
+- Expand prediction $\hat{y}_i = \hat{m}(\mathbf{x}_i)$ into
     -   $\hat{m}_{0}$: Average prediction (_"intercept"_) plus...
     -   Terms $\hat{m}_S$ with feature set $S \subseteq \{1, \ldots, p\}$
-
-\vfill
 
 . . .
 
@@ -145,22 +143,24 @@ scores[, learner_id := factor(learner_id, levels = rev(learner_order))]
 &  \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effect terms}} +
 \end{align*}
 
+\vfill
+
 ## Functional ANOVA Expansion
 
 ::: nonincremental
 
 - Regression with target $Y_i \in \mathbb{R}$, features $X_i \in \mathbb{R}^p$, instance $\mathbf{x}_i$
-- Expand prediction $\hat{m}(\mathbf{x}_i)$ for $Y_i$ into
+- Expand prediction $\hat{y}_i = \hat{m}(\mathbf{x}_i)$ into
     -   $\hat{m}_{0}$: Average prediction (_"intercept"_) plus...
     -   Terms $\hat{m}_S$ with feature set $S \subseteq \{1, \ldots, p\}$
-
-\vfill
 
 \begin{align*}
 \hat{m}(\mathbf{x}_i) = & \hat{m}_{0} + \\
 &  \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effect terms}} + \\
 &  \underbrace{\hat{m}_{1,2}(x_1,x_2) + \hat{m}_{1,3}(x_1,x_3) + \hat{m}_{2,3}(x_2,x_3)}_{\text{2nd order interactions}} +
 \end{align*}
+
+\vfill
 
 :::
 
@@ -169,11 +169,9 @@ scores[, learner_id := factor(learner_id, levels = rev(learner_order))]
 ::: nonincremental
 
 - Regression with target $Y_i \in \mathbb{R}$, features $X_i \in \mathbb{R}^p$, instance $\mathbf{x}_i$
-- Expand prediction $\hat{m}(\mathbf{x}_i)$ for $Y_i$ into
+- Expand prediction $\hat{y}_i = \hat{m}(\mathbf{x}_i)$ into
     -   $\hat{m}_{0}$: Average prediction (_"intercept"_) plus...
     -   Terms $\hat{m}_S$ with feature set $S \subseteq \{1, \ldots, p\}$
-
-\vfill
 
 \begin{align*}
 \hat{m}(\mathbf{x}_i) = & \hat{m}_{0} + \\
@@ -181,6 +179,8 @@ scores[, learner_id := factor(learner_id, levels = rev(learner_order))]
 &  \underbrace{\hat{m}_{1,2}(x_1,x_2) + \hat{m}_{1,3}(x_1,x_3) + \hat{m}_{2,3}(x_2,x_3)}_{\text{2nd order interactions}} + \\ 
 &  \underbrace{\hat{m}_{1,2,3}(x_1,x_2,x_3)}_{\text{3rd order interaction}}
 \end{align*}
+
+\vfill
 
 :::
 
@@ -496,7 +496,7 @@ scores |>
       task_label = reorder(task_label, n*p)
       #task_label = stringr::str_wrap(task_label, width = 20, whitespace_only = FALSE)
     ) |>
-    ggplot(aes(y = learner_id, x = 100 * rrse, fill = learner_id, color = learner_id)) +
+    ggplot(aes(y = learner_id, x = rmse, fill = learner_id, color = learner_id)) +
     facet_wrap(vars(task_label), ncol = 2, scales = "free") +
     geom_boxplot(alpha = .5) +
     geom_jitter(shape = 21, stroke = .5, alpha = .15, size = 1) +
@@ -505,7 +505,7 @@ scores |>
     labs(
       # title = "Scores per task",
       # subtitle = "Tasks ordered by n * p, decreasing",
-      y = NULL, x = "RRSE (%) (lower is better)"
+      y = NULL, x = "RMSE"
     ) +
     theme_minimal(base_size = 16) +
     theme(
@@ -515,7 +515,7 @@ scores |>
 ```
 
 
-{\small $\mathrm{RRSE} := \sqrt{\mathrm{SSE}(Y, \hat{Y})\ /\ \mathrm{SSE}(Y, \bar{Y})}$}
+<!-- $\mathrm{RRSE} := \sqrt{\mathrm{SSE}(Y, \hat{Y})\ /\ \mathrm{SSE}(Y, \bar{Y})}$ -->
 
 
 ## Summary
