--- a/2025/03-dagstat/rpf.tex
+++ b/2025/03-dagstat/rpf.tex
@@ -181,7 +181,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   Regression with target \(Y_i \in \mathbb{R}\), features
   \(X_i \in \mathbb{R}^p\), instance \(\mathbf{x}_i\)
 \item
-  Expand prediction \(\hat{m}(\mathbf{x}_i)\) for \(Y_i\) into
+  Expand prediction \(\hat{y}_i = \hat{m}(\mathbf{x}_i)\) into
 
   \begin{itemize}[<+->]
   \tightlist
@@ -194,14 +194,14 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   \end{itemize}
 \end{itemize}
 
-\vfill
-
 \pause
 
 \begin{align*}
 \hat{m}(\mathbf{x}_i) = & \hat{m}_{0} + \\
 &  \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effect terms}} +
 \end{align*}
+
+\vfill
 \end{frame}
 
 \begin{frame}{Functional ANOVA Expansion}
@@ -212,7 +212,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   Regression with target \(Y_i \in \mathbb{R}\), features
   \(X_i \in \mathbb{R}^p\), instance \(\mathbf{x}_i\)
 \item
-  Expand prediction \(\hat{m}(\mathbf{x}_i)\) for \(Y_i\) into
+  Expand prediction \(\hat{y}_i = \hat{m}(\mathbf{x}_i)\) into
 
   \begin{itemize}
   \tightlist
@@ -225,13 +225,13 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   \end{itemize}
 \end{itemize}
 
-\vfill
-
 \begin{align*}
 \hat{m}(\mathbf{x}_i) = & \hat{m}_{0} + \\
 &  \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effect terms}} + \\
 &  \underbrace{\hat{m}_{1,2}(x_1,x_2) + \hat{m}_{1,3}(x_1,x_3) + \hat{m}_{2,3}(x_2,x_3)}_{\text{2nd order interactions}} +
 \end{align*}
+
+\vfill
 \end{frame}
 
 \begin{frame}{Functional ANOVA Expansion}
@@ -242,7 +242,7 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   Regression with target \(Y_i \in \mathbb{R}\), features
   \(X_i \in \mathbb{R}^p\), instance \(\mathbf{x}_i\)
 \item
-  Expand prediction \(\hat{m}(\mathbf{x}_i)\) for \(Y_i\) into
+  Expand prediction \(\hat{y}_i = \hat{m}(\mathbf{x}_i)\) into
 
   \begin{itemize}
   \tightlist
@@ -255,14 +255,14 @@ Bremen \\ \textsuperscript{4}Munich Center for Machine Learning
   \end{itemize}
 \end{itemize}
 
-\vfill
-
 \begin{align*}
 \hat{m}(\mathbf{x}_i) = & \hat{m}_{0} + \\
 &  \underbrace{\hat{m}_1(x_1) + \hat{m}_2(x_2) + \hat{m}_3(x_3)}_{\text{Main effect terms}} + \\
 &  \underbrace{\hat{m}_{1,2}(x_1,x_2) + \hat{m}_{1,3}(x_1,x_3) + \hat{m}_{2,3}(x_2,x_3)}_{\text{2nd order interactions}} + \\ 
 &  \underbrace{\hat{m}_{1,2,3}(x_1,x_2,x_3)}_{\text{3rd order interaction}}
 \end{align*}
+
+\vfill
 \end{frame}
 
 \begin{frame}{Trees in Random Forest}
@@ -505,8 +505,6 @@ Gains in interpretibility → sacrifices in predictive performance?
 \begin{center}
 \includegraphics[width=\linewidth,height=0.75\textheight,keepaspectratio]{rpf_files/figure-beamer/bm-scores-sel-1.png}
 \end{center}
-
-\{\small \(\mathrm{RRSE} := \sqrt{\mathrm{SSE}(Y, \hat{Y})\ /\ \mathrm{SSE}(Y, \bar{Y})}\)\}
 \end{frame}
 
 \begin{frame}{Summary}
